# skyBlocks

./: .gitignore  CMakeLists.txt  README.md  main.cpp
desktop_app/: CMakeLists.txt  Connector.cpp  Connector.h  tests_gmock.cpp  tests_gtest.cpp
desktop_app/blocks/: Block.h  FuncBlock.cpp  IOBlock.cpp  IfBlock.h
desktop_app/lib.linux/blocks/: CMakeLists.txt
desktop_app/lib.linux/blocks/include/: Algorithm.h  Block.h  BlockFactory.h  Continue.h  Figure.h  FigureFactory.h  FuncBlock.h  IOBlock.h  IfBlock.h  JsonObject.h  Line.h  Terminal.h  WhileBlock.h
desktop_app/lib.linux/blocks/src/: Algorithm.cpp  Block.cpp  BlockFactory.cpp  Continue.cpp  Figure.cpp  FigureFactory.cpp  FuncBlock.cpp  IfBlock.cpp  JsonObject.cpp  Line.cpp  Terminal.cpp  WhileBlock.cpp
desktop_app/lib.linux/blocks/tests/: tests_gmock.cpp  tests_gtest.cpp
desktop_app/requests/: ConcreteRequest.cpp  ConcreteRequest.h  GetRequest.cpp  GetRequest.h  PostRequest.cpp  PostRequest.h  Request.cpp  Request.h
desktop_app/src/: drawsettings.cpp  main.cpp  qtblocksjson.cpp  renderarea.cpp  skyblockseditor.cpp  skyblockseditor.h  skyblockseditor.ui
desktop_app/src/include/: drawsettings.h  qtblocksjson.h  renderarea.h  skyblockseditor.h
desktop_app/src/ui/: drawsettings.ui  skyblockseditor.ui
parser/: CMakeLists.txt  Parser.cpp  Parser.h  analyzerTest.cpp  main.cpp  parserTest.cpp  ptrVector.h  schedulerTest.cpp  test.cpp
parser/Analyzer/: AAnalyzeFactory.h  AAnalyzer.h  AConstraintor.h  AccumulateErrors.h  AlphabetType.h  AnalyzeFactoryCreator.h  AnalyzeFactoryType.h
parser/Analyzer/IndentAnalyze/: IndentAnalyzeFactory.h  IndentAnalyzer.cpp  IndentAnalyzer.h  IndentConstraintor.cpp  IndentConstraintor.h  States.h
parser/Analyzer/IndentAnalyze/Alphabet/: BaseAlphabet.h  BaseIndentAlphabet.h  IndentAlphabetCreator.h  PythonLikeAlphabet.h  RuPseudoCodeAlphabet.h
parser/Analyzer/IndentAnalyze/Tools/: AnalyzerUtils.h  IndentAnalyzerUtils.h  Liner.cpp  Liner.h  Memory.cpp  Memory.h  States.h  Utils.h
parser/Analyzer/Primitive/: APrimitive.h  ComplexPrimitive.h  PAlgorithm.h  PCycle.h  PFollow.h  PFork.h  PFunc.h
parser/Analyzers/: AbstractAnalyzer.cpp  AbstractAnalyzer.h  AnalyzerType.h  BaseAnalyzer.cpp  BaseAnalyzer.h  ClikeAnalyzer.cpp  ClikeAnalyzer.h  EnPseudoAnalyzer.cpp  EnPseudoAnalyzer.h  PythonLikeAnalyzer.cpp  PythonLikeAnalyzer.h  RuPseudoAnalyzer.cpp  RuPseudoAnalyzer.h
parser/Error/: Error.h
parser/Errors/: Error.h  ParseError.h
parser/Figures/: AbstractFigure.cpp  AbstractFigure.h  Arrow.cpp  Arrow.h  BegEnd.cpp  BegEnd.h  BorderedRect.cpp  BorderedRect.h  DoubleMeasureFigure.cpp  DoubleMeasureFigure.h  Hrombus.cpp  Hrombus.h  Line.cpp  Line.h  OneMeasureFigure.cpp  OneMeasureFigure.h  Rectangle.cpp  Rectangle.h
parser/Fixtures/: FEmborderScheduler.h  FIndentAnalyzer.h  FIndentPythonLikeAnalyzer.h  FIndentPythonLikeConstraintor.h  FIxtureEmborderScheduler.h  FixtureIndentAnalyzer.h
parser/Interfaces/: Figurable.h  Jsonable.h
parser/JsonFormer/: JsonFormer.cpp  JsonFormer.h
parser/Mocks/: MockAnalyzeFactory.h  MockAnalyzer.h  MockParser.cpp  MockParser.h  MockScheduler.h
parser/Primitives/: AbstractPrimitive.cpp  AbstractPrimitive.h  Cycle.cpp  Cycle.h  Follow.cpp  Follow.h  Fork.cpp  Fork.h  SubScheme.cpp  SubScheme.h
parser/Scheduler/: AScheduler.h  CommonScheduler.cpp  CommonScheduler.h  SchedulerCreator.h  SchedulerType.h
parser/Scheduler/EmborderScheduler/: EmborderScheduler.cpp  EmborderScheduler.h  GostScheduler.cpp  GostScheduler.h
parser/Scheduler/Figure/: AFigure.h  DoubleMeasureFigure.h  FArrorw.h  FBegCycle.h  FBegEnd.h  FBegin.h  FContinue.cpp  FContinue.h  FEnd.h  FEndCycle.h  FFollow.h  FFork.h  FFunc.h  FLine.h  FigureCreator.h  FigureTypes.h  SingleMeasureFigure.h
parser/Scheduler/Figure/Primitives/: Point.h  Rect.h
parser/Scheduler/GostScheduler/: GostScheduler.cpp  GostScheduler.h
parser/Scheduler/UniverseScheduler/: EmborderScheduler.cpp  EmborderScheduler.h
parser/Schedulers/: AbstractScheduler.cpp  AbstractScheduler.h  GostScheduler.cpp  GostScheduler.h  SchedulerType.h
parser/Stubs/: Stubs.h
parser/Tools/: Liner.cpp  Liner.h  Meta.cpp  Meta.h  SizedLiner.cpp  SizedLiner.h  ptrVector.h
parser/tests/: analyzerTest.cpp  constraintorTest.cpp  parserTest.cpp  parserToolsTest.cpp  schedulerTest.cpp
server/: CMakeLists.txt  DataBaseConnection.cpp  DataBaseConnection.h  JsonExtractor.cpp  JsonExtractor.h
